--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,48 +1,60 @@
-name: Express MongoDB CI/CD
+name: Node.js CI
 
-# Memicu workflow saat push ke branch main
 on:
   push:
     branches:
       - main
-      - master
   pull_request:
     branches:
       - main
-      - master
-
-env:
-  MONGODB_URI: mongodb://localhost:27017/task-4
-  PORT: 8000
-  USER_NAME: admin
-  USER_PASSWORD: admin
 
 jobs:
-  build-and-test:
+  test:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [16.x, 18.x]
-        mongodb-version: ['5.0']
+    services:
+      mongodb:
+        image: mongo:latest
+        ports:
+          - 27017:27017
+        options: --bind_ip_all
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      # Step 1: Checkout kode dari repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Setup Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+      # Step 2: Set up Node.js
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18' 
 
-    - name: Start MongoDB
-      uses: supercharge/mongodb-github-action@1.8.0
-      with:
-        mongodb-version: ${{ matrix.mongodb-version }}
+      # Step 3: Install dependencies
+      - name: Install dependencies
+        run: npm install
 
-    - name: Install dependencies
-      run: npm ci
+      # Step 4: Jalankan pengujian
+      - name: Run tests
+        env:
+          MONGODB_URI: mongodb://localhost:27017/testdb # Konfigurasi MongoDB untuk testing
+        run: npm test
 
-    - name: Run tests
-      run: npm test
+  build:
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build application
+        run: npm run build
