--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: Express CI/CD
 
 on:
   push:
@@ -28,7 +28,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18' 
+          node-version: '18' # Sesuaikan dengan versi Node.js aplikasi Anda
 
       # Step 3: Install dependencies
       - name: Install dependencies
@@ -42,7 +42,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: test
+    needs: test  # Job build hanya akan berjalan jika job test berhasil
 
     steps:
       - name: Checkout repository
