--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,11 +17,6 @@ jobs:
         image: mongo:latest
         ports:
           - 27017:27017
-        options: > 
-          --health-cmd "mongosh --eval 'db.runCommand({ ping: 1 })'" 
-          --health-interval 10s 
-          --health-timeout 5s 
-          --health-retries 5
 
     steps:
       - name: Checkout repository
@@ -31,11 +26,11 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Build Docker image
-        run: docker build -t nama-aplikasi-anda .
+        run: docker build -t task-5 .
 
       - name: Run tests
-        run: docker run --rm nama-aplikasi-anda npm test
-        
+        run: docker run --rm task-5 npm test
+
   build:
     runs-on: ubuntu-latest
     needs: test  # Job build hanya akan berjalan jika job test berhasil
